# knowhow

./: .air.toml  .dockerignore  .env.example  .gitignore  CLAUDE.md  Claude.md  Dockerfile  KNOWHOW_PROPOSAL.md  KNOWHOW_ROADMAP.md  Makefile  README.md  ROADMAP.md  STATUS.md  docker-compose.yml  go.mod  go.sum  gqlgen.yml  justfile  memcp.py  pyproject.toml  server.py  supervisord.conf  test_graphql.py  test_integration.py  test_memcp.py  webui-plan.md
.claude/agents/: frontend.md  surrealdb.md
.claude/docs/: surrealdb.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
cmd/knowhow/: main.go
cmd/knowhow-server/: main.go
cmd/memcp/: main.go
dashboard/: .gitignore  next.config.js  package-lock.json  package.json  tailwind.config.ts
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: AppProvider.tsx  Sidebar.tsx
dashboard/lib/: graphql.ts  types.ts
docs/: bedrock.md  embeddings.md  feature-code-ingestion.md  langchaingo.md  llm.md  memcp-guide.epub  memcp-guide.md  rag.md  surrealdb.md
docs/diagrams/: architecture.mmd  datamodel.mmd  nli.mmd  search.mmd  traversal.mmd
helm/knowhow/: Chart.yaml  values.yaml
helm/memcp/: Chart.yaml  values.yaml
internal/cli/: add.go  ask.go  delete.go  export.go  jobs.go  link.go  list.go  progress.go  root.go  scrape.go  search.go  template.go  update.go  usage.go
internal/client/: client.go
internal/config/: config.go  logging.go
internal/db/: client.go  client_test.go  db_test.go  errors.go  queries.go  queries_test.go  schema.go
internal/embedding/: anthropic.go  embedder.go  ollama.go  ollama_test.go
internal/graph/: generated.go  helpers.go  model_gen.go  models.go  resolver.go  schema.graphqls  schema.resolvers.go
internal/llm/: embedder.go  model.go  model_test.go
internal/metrics/: collector.go
internal/models/: chunk.go  conversation.go  entity.go  episode.go  job.go  (+6 more)
memcp/: __init__.py  db.py  models.py  server.py  test_db.py  test_e2e.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+160 files in other folders)
