[project]
name = "memcp"
version = "0.1.7"
description = "MCP server with SurrealDB knowledge graph for persistent agent memory"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.14.0,<3",
    "pydantic>=2.0.0",
    "surrealdb>=0.3.0",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
memcp = "memcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["memcp"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
