[project]
name = "memcp"
version = "0.1.7"
description = "MCP server with SurrealDB knowledge graph for persistent agent memory"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.14.0,<3",
    "pydantic>=2.0.0",
    "surrealdb>=0.3.0",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
webui = [
    "fastapi>=0.115.0",
    "strawberry-graphql[fastapi]>=0.252.0",
    "uvicorn[standard]>=0.32.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
memcp = "memcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["memcp"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 30
timeout_method = "thread"
markers = [
    "integration: marks tests as integration tests (require SurrealDB)",
    "embedding: marks tests that require embedding models (slow to load)",
]
